GH-14 - Remove Lombok from production sources.
Polished a lot of Javadoc.